# patent_art

./: .gitignore  generate_patent_analysis.py  generate_patent_embeddings.py  generate_patent_metrics_analysis.py  main_app.py  patent_dashboard_chart_functions.py  pyproject.toml  requirements-kaggle.txt  requirements.txt  run_patent_search_pipeline.py  streamlit_patent_dashboard.py
assets/: architecture_diagram.mmd  bigquery_ai_survey.txt  citation.html  dataset_summary.html  latency.html
pages/: 1_Patents_Dashboard.py  2_Semantic_Search.py  3_Performance_Metrics.py  3_📈_Performance_Metrics.py  patent_dashboard.py  patent_semantic_search.py
src/google/: google_client.py
src/kaggle/: kaggle_patent_chart_metrics.py  kaggle_patent_search_demo.py  kaggle_patent_search_demoo.py  patent_dashboard_chart_functions.py
src/kaggle/notebook/: state-of-the-art-patent-discovery.ipynb
src/patent_search/: semantic_search.py
src/sql_queries/: bq_queries.py
tests/latency_performance/: query_latency_measurement.py  query_latency_measurement_v2.py
tests/semantic_and_keyword_search_performance/: semantic_and_keyword_search_perf.py
tests/system_performance/: bq_partition_pruning_performance.py  bq_partition_pruning_visualization.py
tests/vector_index_performance/: bq_vector_index_performance.py
